[gd_scene load_steps=3 format=3 uid="uid://d3guiso7yhc3v"]

[ext_resource type="Script" path="res://levels/main/scripts/testing.gd" id="1_e2hf3"]

[sub_resource type="GDScript" id="GDScript_p0320"]
script/source = "extends ColorRect


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	EventSystem.clue_table_completed.connect(completed)
	pass # Replace with function body.

func completed():
	modulate = Color.GREEN

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="TopBar" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
color = Color(0.344076, 0.344076, 0.344076, 1)

[node name="SimpleClueTable" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 932.0
offset_top = 27.0
offset_right = 972.0
offset_bottom = 67.0
script = SubResource("GDScript_p0320")

[node name="Testing" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e2hf3")

[node name="Button" type="Button" parent="CanvasLayer/Testing"]
offset_left = 462.0
offset_top = 207.0
offset_right = 568.0
offset_bottom = 238.0
text = "Play a sound
"

[node name="Button2" type="Button" parent="CanvasLayer/Testing"]
offset_left = 462.0
offset_top = 275.0
offset_right = 568.0
offset_bottom = 306.0
text = "Play BGM
"

[node name="TestLevel" type="Button" parent="CanvasLayer/Testing"]
offset_left = 459.0
offset_top = 331.0
offset_right = 570.0
offset_bottom = 362.0
text = "Move to level
"

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.248731, 0.401972, 0.406225, 1)
z_index = -5
position = Vector2(577, 326)
scale = Vector2(2.3, 1.3)

[connection signal="pressed" from="CanvasLayer/Testing/Button" to="CanvasLayer/Testing" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Testing/Button2" to="CanvasLayer/Testing" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Testing/TestLevel" to="CanvasLayer/Testing" method="_on_test_level_pressed"]
